# GlyphForge-CPP

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  duplicates.md  generate_combinations.cpp  test_writer.cpp
GlyphEngine/: attributes.h  bases.cpp  bases.h  line_shapes.cpp  line_shapes.h  writer.cpp  writer.h
UniqueNumDebug/: 15_unique_combinations.txt
docs/: math_breakdown.md
examples/: basic_glyph.cpp  custom_spell.cpp
include/: bases.h  binary_utils.h  config.h  error_handling.h  line_shapes.h  resource_manager.h  utils.h  writer.h
include/gui/: controls.h  spell_form.h  window.h
resources/: attributes.json
src/: bases.cpp  binary_utils.cpp  combinations.cpp  line_shapes.cpp  main.cpp  resource_manager.cpp  utils.cpp  writer.cpp
src/gui/: controls.cpp  spell_form.cpp  window.cpp
tests/: test_bases.cpp  test_lines.cpp  test_utils.cpp  test_writer.cpp
